--- a/Attar group project/attar_group_frontend/src/Customer/styles/Header.css
+++ b/Attar group project/attar_group_frontend/src/Customer/styles/Header.css
@@ -37,4 +37,13 @@
     background-color: #999;
   }
 
-  
+  .cart-count {
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 12px;
+  margin-left: 4px;
+  position: relative;
+  top: -8px;
+}
